# wenlock2

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_docker.sh  handler.md  wenlock
include/: handler.hpp  log.hpp
include/commands/: embedtest.hpp  phonedb.hpp  ping.hpp
include/commands/captcha/: linkcaptcha.hpp  request.hpp  verify.hpp
include/commands/github/: gh-issue.hpp  gh-link.hpp  gh-setup.hpp  setup.hpp
include/commands/phonedb/: phoneinfo.hpp  phonesearch.hpp  rank.hpp
include/integrations/: database.hpp  github.hpp  github.md  phonedb.hpp  scraper.hpp
src/: example.cpp  handler.cpp  log.cpp  main.cpp
src/integrations/: database.cpp  phonedb.cpp  scraper.cpp
